--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DETOVA Labs</title>
     <link rel="icon" type="images" href="images/DETOVA logo.jpg">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -141,5 +142,6 @@
     </p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
