--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   <section id="projects">
     <h2>Our Projects</h2>
     <p>Every project begins with an idea, sharpened in the fire of hackathons and client briefs.Some remain experiments, others grow into full products. All of them are lessons we carry forward.</p>
+    <h2>Project Cards</h2>
     <ul>
-      <h2>Project Cards</h2>
       <!-- he said we should make placeholders for this -->
       <li>
         <h3>Hackathon Team Finder</h3>
@@ -125,8 +125,8 @@
     <p>Email: <a href="mailto:detovalab@gmail.com">detovalab@gmail.com</a></p>
     <p>
       Socials:
-      <a href="https://x.com/DetovaLabs">X</a> |
-      <a href="https://www.linkedin.com/company/detovalabs">LinkedIn</a> |
+      <a href="https://x.com/DetovaLabs">X</a>
+      <a href="https://www.linkedin.com/company/detovalabs">LinkedIn</a>
       <a href="#">Instagram</a>
     </p>
   </section>
