Added an application page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section>
     <h1>We learn. We build. We ship.</h1>
     <p>DETOVA Labs is a student-led innovation lab from CHRISLAND University. We bring together developers, designers, and storytellers to build Web2 and Web3 solutions that matter. From hackathons to client projects, every line of code and every design is proof of what young talent can do.</p>
-    <button>Work with us</button>
+    <button class="btn" onclick="window.location.href='apply.html'">Work with us</button>
   </section>
 
   <section id="about">
@@ -144,7 +144,7 @@
       <li>Investor Relations Intern</li>
     </ul>
     <p>This is not theory. This is not about waiting for the future. It is about shaping it.</p>
-    <button>Join Us Now</button>
+    <button class="btn" onclick="window.location.href='apply.html'">Join Us Now</button>
   </section>
 
   <section id="contact">
