changed weekly mentorship to minthly

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <li>Real Projects – Work on hackathons, lab experiments, and live projects that go straight to GitHub and our website.</li>
       <li>Portfolio Growth – Build a record of practical work you can show future employers.</li>
       <li>Certificate of Completion – Official recognition of your internship with us.</li>
-      <li>Mentorship – Weekly sessions with experienced builders, creators, and strategists across Web3, tech, and design.</li>
+      <li>Mentorship – Monthly sessions with experienced builders, creators, and strategists across Web3, tech, and design.</li>
       <li>Career Support – Recommendation letters, LinkedIn endorsements, and alumni spotlight on our site.</li>
       <li>Community – Join a growing network of students, interns, and professionals shaping the future of Web3 and tech in Africa.</li>
       <li>Flexibility – Remote-friendly, with room to balance school, work, and growth.</li>
