--- a/main-detova-site/apply.html
+++ b/main-detova-site/apply.html
@@ -62,7 +62,7 @@
 
   <div class="container">
     <h1>Apply for Internship</h1>
-    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <form action="https://formspree.io/f/xblzrlkd" method="POST">
       
       <label for="name">Full Name</label>
       <input type="text" id="name" name="name" required>
