--- a/main-detova-site/index.html
+++ b/main-detova-site/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DETOVA Labs</title>
-  <link rel="icon" type="image/png" href="images/DETOVA logo.jpg">
+  <link rel="icon" type="image/png" href="images/logo.jpg">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <a href="index.html">
-      <img src="images/logo.jpg" alt="Detova Labs Logo" width="40">
+      <img src="images/DETOVA logo.jpg" alt="Detova Labs Logo" width="60" height="60">
       DETOVA LABS
     </a>
 
