ig handle added, logo compatible for smaller screens

--- a/main-detova-site/index.html
+++ b/main-detova-site/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="images/DETOVA logo.jpg" alt="Detova Labs Logo" width="60" height="60">
+      <img src="images/DETOVA logo.jpg" alt="Detova Labs Logo" class="logo">
       DETOVA LABS
     </a>
 
@@ -161,7 +161,7 @@
       Socials:
       <a href="https://x.com/DetovaLabs">X</a>
       <a href="https://www.linkedin.com/company/detovalabs">LinkedIn</a>
-      <a href="#">Instagram</a>
+      <a href="https://www.instagram.com/detova_labs">Instagram</a>
     </p>
   </section>
 
@@ -172,7 +172,7 @@
       Socials:
       <a href="https://x.com/DetovaLabs">X</a> |
       <a href="https://www.linkedin.com/company/detovalabs">LinkedIn</a> |
-      <a href="#">Instagram</a>
+      <a href="https://www.instagram.com/detova_labs">Instagram</a>
     </p>
   </footer>
 
